--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
 <html>
   <head>
-    
+    <title>
+      My First Website 
+    </title>
   <head>
-<html>
+  <body>
+    hello u pls claim ur 500 thOuSanD🤪🥴 ruBuX 
+  </body>
+</html>
