--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     </title>
   <head>
   <body>
-    hello u pls claim ur 500 thOuSanD🤪🥴 ruBuX 
+    hello pls claim ur 500 thOuSanD🤪🥴
+    ruBuX click the blue button😃😃😱
+    <a href = "https://youtu.be/xvFZjo5PgG0">
+      Click me
+    </a>
   </body>
 </html>
