--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       My First Website 
     </title>
   <head>
+    <h1>Hello world</h1>
   <body>
     hello pls claim ur 500 thOuSanD🤪🥴
     ruBuX click the blue button😃😃😱
