--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html>
   <head>
     <title>
-      My First Website 
+      OHIO LINKS😏😏😏 
     </title>
   <head>
     <h1>Hello world</h1>
   <body>
-    hello pls claim ur 500 thOuSanD🤪🥴
-    ruBuX click the blue button😃😃😱
+    <h1>links from ohiooooo🥴🥴</h1>
+    <hr>
     <a href = "https://youtu.be/xvFZjo5PgG0">
       Click me
     </a>
