--- a/index.html
+++ b/index.html
@@ -2,30 +2,10 @@
 
 <html>
   <head>
-    <title>
-      OHIO LINKS😏😏😏 
-    </title>
-  <head>
-    <h1>Hello world</h1>
+    <title>Ohio Links😏😏😏😏</title>
+  </head>
   <body>
-    <h1>links from ohiooooo🥴🥴</h1>
-    <hr>
-    <a href = "https://youtu.be/xvFZjo5PgG0">
-      Click me
-    </a>
-    <br>
-    <a href = "https://youtu.be/0bZ0hkiIKt0">
-      lubot😱
-    </a>
-    <br>
-      <a href = "https://youtu.be/XppF8MziKTk">
-        martin?
-      </a>
-      <br>
-      <a href = "https://youtu.be/HEyqytq0-is">
-        i name it pepapig
-      </a>
-      <br>
+    <h1 style="text-align: center;">Ohio Links</h1>
+    <a href = "page2.html"><h1 style="text-align: center;">Enter</h1></a>
   </body>
-      
 </html>
