--- a/page2.html
+++ b/page2.html
@@ -26,6 +26,13 @@
         i name it pepapig
       </a>
       <br>
+      <a href = "https://youtu.be/f_Pcu6wTzoA">
+         by my friend: spider man trailer 
+      </a>
+      <br>
+      <a href = "https://youtu.be/I8Rg1BjpzWc">
+        by my friend: pov ur uncle 
+      </a>
   </body>
       
 </html>
